🐛 Fix breadcrumbs for wrap

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-  @apply w-2;
+  @apply w-2 h-0.5;
 }
 ::-webkit-scrollbar-track {
   @apply bg-transparent;
